--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,7 @@
 *.txt text
 
 # Magisk
+magisk-module/**/*.sh -text
 magisk-module/META-INF/com/google/android/update-binary -text
 magisk-module/META-INF/com/google/android/updater-script -text
 
