--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -9,4 +9,6 @@ crate-type = ["staticlib"]
 
 [dependencies]
 libc = "0.2"
-once_cell = "1.19"
+once_cell = "1.18"
+log = "0.4"
+android_logger = "0.15"
