Build update cmake and cargo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,21 @@
 cmake_minimum_required(VERSION 3.21)
 project(QoS LANGUAGES CXX C)
+
+include(CheckIPOSupported)
+check_ipo_supported(RESULT result OUTPUT output)
+if(result)
+    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
+    message(STATUS ">> LTO (Link Time Optimization): DIAKTIFKAN")
+else()
+    message(WARNING ">> LTO tidak didukung: ${output}")
+endif()
+
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    message(STATUS ">> Mode Release...")
+    add_compile_options(-Oz -ffunction-sections -fdata-sections)
+    add_link_options(-Wl,--gc-sections -Wl,--icf=all -Wl,-s)
+endif()
+
 find_program(CARGO_EXECUTABLE cargo REQUIRED)
 
 if(ANDROID_ABI STREQUAL "arm64-v8a")
@@ -18,6 +34,7 @@ message(STATUS "NDK ABI: ${ANDROID_ABI}")
 message(STATUS "Rust Target: ${RUST_TARGET}")
 
 set(RUST_CRATE_PATH ${CMAKE_SOURCE_DIR}/src)
+set(RUST_WORKSPACE_TARGET_DIR ${CMAKE_SOURCE_DIR}/target)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(RUST_BUILD_TYPE_DIR "debug")
@@ -28,7 +45,7 @@ else()
 endif()
 
 set(RUST_LIB_NAME "qos_logic")
-set(RUST_LIB_DIR ${RUST_CRATE_PATH}/target/${RUST_TARGET}/${RUST_BUILD_TYPE_DIR})
+set(RUST_LIB_DIR ${RUST_WORKSPACE_TARGET_DIR}/${RUST_TARGET}/${RUST_BUILD_TYPE_DIR})
 set(RUST_STATIC_LIB ${RUST_LIB_DIR}/lib${RUST_LIB_NAME}.a)
 
 add_custom_command(
@@ -37,17 +54,22 @@ add_custom_command(
     WORKING_DIRECTORY ${RUST_CRATE_PATH}
     DEPENDS ${RUST_CRATE_PATH}/Cargo.toml
             ${RUST_CRATE_PATH}/src/lib.rs
-            ${RUST_CRATE_PATH}/src/c_api.rs
-            ${RUST_CRATE_PATH}/src/ffi.rs
-            ${RUST_CRATE_PATH}/src/system_utils.rs
-            ${RUST_CRATE_PATH}/src/tweaker_logic.rs
-            ${RUST_CRATE_PATH}/src/memory_logic.rs
-            ${RUST_CRATE_PATH}/src/refresh_logic.rs
-            ${RUST_CRATE_PATH}/src/storage_logic.rs
-            ${RUST_CRATE_PATH}/src/vm_logic.rs
-            ${RUST_CRATE_PATH}/src/logger.rs
-            ${RUST_CRATE_PATH}/src/traits.rs
-            ${RUST_CRATE_PATH}/src/error.rs
+            ${RUST_CRATE_PATH}/src/bindings/mod.rs
+            ${RUST_CRATE_PATH}/src/bindings/c_api.rs
+            ${RUST_CRATE_PATH}/src/bindings/ffi.rs
+            ${RUST_CRATE_PATH}/src/common/mod.rs
+            ${RUST_CRATE_PATH}/src/common/error.rs
+            ${RUST_CRATE_PATH}/src/common/fs.rs
+            ${RUST_CRATE_PATH}/src/common/logger.rs
+            ${RUST_CRATE_PATH}/src/common/psi.rs
+            ${RUST_CRATE_PATH}/src/common/state.rs
+            ${RUST_CRATE_PATH}/src/common/traits.rs
+            ${RUST_CRATE_PATH}/src/controllers/mod.rs
+            ${RUST_CRATE_PATH}/src/controllers/memory_logic.rs
+            ${RUST_CRATE_PATH}/src/controllers/signal_logic.rs
+            ${RUST_CRATE_PATH}/src/controllers/storage_logic.rs
+            ${RUST_CRATE_PATH}/src/controllers/tweaker_logic.rs
+            ${RUST_CRATE_PATH}/src/controllers/display_logic.rs
     COMMENT "Building Rust static library (${CMAKE_BUILD_TYPE}) for ${RUST_TARGET}..."
 )
 
@@ -58,7 +80,6 @@ set(JNI_INCLUDE_DIR ${JNI_DIR}/include)
 set(JNI_SRC_DIR ${JNI_DIR}/src)
 
 file(GLOB CPP_HEADERS "${JNI_INCLUDE_DIR}/*.h")
-
 file(GLOB ALL_CPP_SOURCES "${JNI_SRC_DIR}/*.cpp")
 
 set(LIB_CPP_SOURCES ${ALL_CPP_SOURCES})
