--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,10 @@ members = [
     "src"
 ]
 resolver = "2"
+
+[profile.release]
+lto = true
+codegen-units = 1
+strip = true
+panic = "abort"
+opt-level = "z"
