--- a/magisk-module/config.ini
+++ b/magisk-module/config.ini
@@ -1,15 +1,35 @@
-# ==========================================
-# Configuration
-# ==========================================
+; ==============================================================================
+; Configuration
+; ==============================================================================
 
-# ------------------------------------------
-# Display Logic (Refresh Rate Handler)
-# ------------------------------------------
-# Enables automatic refresh rate switching logic
-# based on touch input
-#
-# Values:
-#   true  = Enabled
-#   false = Disabled (Default)
-#
-display_enabled=false
+; ------------------------------------------------------------------------------
+; [CPU Controller]
+; ------------------------------------------------------------------------------
+; Dynamically manages kernel scheduler parameters (EAS/HMP) based on
+; system load pressure (Pressure Stall Information - CPU).
+;
+cpu_enabled=true
+
+; ------------------------------------------------------------------------------
+; [Memory Controller]
+; ------------------------------------------------------------------------------
+; Monitors memory pressure to balance foreground application performance
+; and prevent aggressive process killing by LMKD.
+;
+memory_enabled=true
+
+; ------------------------------------------------------------------------------
+; [Storage Controller]
+; ------------------------------------------------------------------------------
+; Tunes block device I/O queues to maximize data throughput
+; and reduce disk access latency during I/O congestion.
+;
+storage_enabled=true
+
+; ------------------------------------------------------------------------------
+; [System Tweaks]
+; ------------------------------------------------------------------------------
+; Applies a curated set of static kernel (sysctl) configurations and system
+; properties to improve network and kernel stability.
+;
+tweaks_enabled=true
