Restrict to arm64 only

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,27 @@
 cmake_minimum_required(VERSION 3.21)
 project(QoS LANGUAGES CXX C)
 
-include(CheckIPOSupported)
-check_ipo_supported(RESULT result OUTPUT output)
-if(result)
-    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
-    message(STATUS ">> LTO (Link Time Optimization): DIAKTIFKAN")
-else()
-    message(WARNING ">> LTO tidak didukung: ${output}")
-endif()
-
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
-    message(STATUS ">> Mode Release...")
+    include(CheckIPOSupported)
+    check_ipo_supported(RESULT result OUTPUT output)
+    if(result)
+        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
+        message(STATUS ">> LTO (Link Time Optimization): ENABLED")
+    else()
+        message(WARNING ">> LTO not supported: ${output}")
+    endif()
+
+    message(STATUS ">> Release Mode: Enabling optimizations...")
     add_compile_options(-Oz -ffunction-sections -fdata-sections)
     add_link_options(-Wl,--gc-sections -Wl,--icf=all -Wl,-s)
+else()
+    message(STATUS ">> Debug Mode: LTO Disabled")
 endif()
 
 find_program(CARGO_EXECUTABLE cargo REQUIRED)
 
-if(ANDROID_ABI STREQUAL "arm64-v8a")
-    set(RUST_TARGET "aarch64-linux-android")
-elseif(ANDROID_ABI STREQUAL "armeabi-v7a")
-    set(RUST_TARGET "armv7-linux-androideabi")
-elseif(ANDROID_ABI STREQUAL "x86_64")
-    set(RUST_TARGET "x86_64-linux-android")
-elseif(ANDROID_ABI STREQUAL "x86")
-    set(RUST_TARGET "i686-linux-android")
-else()
-    message(FATAL_ERROR "Unsupported Android ABI: ${ANDROID_ABI}")
-endif()
+set(RUST_TARGET "aarch64-linux-android")
+set(ANDROID_ABI "arm64-v8a")
 
 message(STATUS "NDK ABI: ${ANDROID_ABI}")
 message(STATUS "Rust Target: ${RUST_TARGET}")
