--- a/magisk-module/config.ini
+++ b/magisk-module/config.ini
@@ -27,6 +27,14 @@ memory_enabled=true
 storage_enabled=true
 
 ; ------------------------------------------------------------------------------
+; [Display Controller]
+; ------------------------------------------------------------------------------
+; Dynamically adjusts screen refresh rate based on touch input activity
+; to balance smoothness (90Hz) and power consumption (60Hz).
+;
+display_enabled=true
+
+; ------------------------------------------------------------------------------
 ; [System Tweaks]
 ; ------------------------------------------------------------------------------
 ; Applies a curated set of static kernel (sysctl) configurations and system
