--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,10 @@
 [workspace]
-members = [
-    "core"
-]
-resolver = "2"
+members = ["core"]
+resolver = "3"
 
 [profile.release]
 lto = true
 codegen-units = 1
 strip = true
 panic = "abort"
-opt-level = "z"
+opt-level = "s"
