Add cleaner service to default configuration

--- a/magisk-module/config.ini
+++ b/magisk-module/config.ini
@@ -3,6 +3,15 @@
 ; ==============================================================================
 
 ; ------------------------------------------------------------------------------
+; [Cleaner Controller]
+; ------------------------------------------------------------------------------
+; Performs opportunistic background cleanup of cache and stale data
+; based on system load, thermal conditions, and storage pressure.
+; Designed to minimize impact on active applications and foreground tasks.
+;
+cleaner_enabled=true
+
+; ------------------------------------------------------------------------------
 ; [CPU Controller]
 ; ------------------------------------------------------------------------------
 ; Dynamically manages kernel scheduler parameters (EAS/HMP) based on
@@ -32,7 +41,7 @@ storage_enabled=true
 ; Dynamically adjusts screen refresh rate based on touch input activity
 ; to balance smoothness (90Hz) and power consumption (60Hz).
 ;
-display_enabled=true
+display_enabled=false
 
 ; ------------------------------------------------------------------------------
 ; [System Tweaks]
