Integrate blocker controller to config and wizard

--- a/magisk-module/config.ini
+++ b/magisk-module/config.ini
@@ -3,6 +3,15 @@
 ; ==============================================================================
 
 ; ------------------------------------------------------------------------------
+; [Blocker Controller]
+; ------------------------------------------------------------------------------
+; Enforces the disabled state of targeted background components
+; (such as specific GMS analytics and ad services) to reduce
+; unnecessary resource consumption and wakeups.
+;
+blocker_enabled=true
+
+; ------------------------------------------------------------------------------
 ; [Cleaner Controller]
 ; ------------------------------------------------------------------------------
 ; Performs opportunistic background cleanup of cache and stale data
