--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,6 +10,6 @@ crate-type = ["staticlib"]
 
 [dependencies]
 libc = "0.2"
-log = "0.4"
+log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
 android_logger = "0.15"
 rustix = { version = "1.1", features = ["fs", "event", "mm", "param"] }
